fix(CodeEditor): apply line breaks in highlighted code of quick info

--- a/src/apps/CodeEditor/components/Editor/Editor.module.scss
+++ b/src/apps/CodeEditor/components/Editor/Editor.module.scss
@@ -79,6 +79,7 @@ ul.autoCompletionMenu {
   font-size: $fontSize;
   overflow: auto;
   padding: $spacingS;
+  white-space: pre-wrap;
   color: $textPrimaryColor;
   border: 0.1rem solid $borderColorPrimary;
   border-radius: $radiusS;
